# cloudflare-warp-qt

./: .gitignore  CMakeLists.txt  README.md  build_install.sh  uninstall.sh  warp-qt.desktop
.github/workflows/: build.yml
appimage/: AppImageBuilder.yml  Cloudflare Warp Qt-latest-x86_64.AppImage  Cloudflare Warp Qt-latest-x86_64.AppImage.zsync  build.sh
appimage/AppDir/: .DirIcon  AppRun.env  cloudflare-warp-qt.desktop
pkgbuilds/: PKGBUILD
resources/: resources.qrc
src/: main.cpp  mainfunctions.cpp  mainfunctions.h  settingsdiag.cpp  settingsdiag.h  systray.cpp  systray.h  widget.cpp  widget.h  widget.ui
